--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,17 +20,17 @@
 
         <Button
             android:text="Play"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Play"
-            android:layout_columnWeight="1" />
+            android:layout_columnWeight="1"
+            android:onClick="playSong" />
 
         <Button
             android:text="Pause"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/pause"
-            android:layout_columnWeight="1" />
+            android:layout_columnWeight="1"
+            android:onClick="pauseSong" />
     </GridLayout>
 
     <TextView
